Now fetching all BLOBS, and putting it into the visible div; Also the entire body is wrapped in an invisible div; Fixed up a few of the keycode comments

--- a/updates.css
+++ b/updates.css
@@ -56,8 +56,13 @@
     background-color: rgb(78, 108, 165);
 }
 
+.visible {display: none;}
+
 @media print {
 	div {display: none;}
 	p {display: none;}
-	img{ display: visible}
+	img{ display: none;}
+	.visible{ display: block;}
+	.invisible{ display: none;}
+	#shadow-root{ display: none;}
 }
